--- a/LAB8/LAB8-1/app/src/main/res/layout/main_fragment.xml
+++ b/LAB8/LAB8-1/app/src/main/res/layout/main_fragment.xml
@@ -72,7 +72,29 @@
                 android:ems="10"
                 android:inputType="textPersonName"
                 android:textSize="18sp" />
+
         </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="10dp">
+
+            <TextView
+                android:id="@+id/textView5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/product_price"
+                android:textSize="18sp" />
+
+            <EditText
+                android:id="@+id/productPrice"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:inputType="textPersonName" />
+        </TableRow>
+
     </TableLayout>
 
     <LinearLayout
